--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI  = mongodb+srv://lasem:lasem1234@cluster0.636teuc.mongodb.net/drnovi?retryWrites=true&w=majority
+MONGODB_URI  = mongodb+srv://lasem1234:lasem1234@cluster0.636teuc.mongodb.net/drnovi?retryWrites=true&w=majority
